[package]
name = "league-reveal-console"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
urlencoding = "2.1"
open = "5.0"
reqwest = { version = "0.11", features = ["json"] }
futures-util = "0.3"
sysinfo = "0.28"