[package]
name = "lol_auto_opener"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
urlencoding = "2.1"
open = "5.0"
base64 = "0.21"